--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
   <div class="container mt-4">
     <div class="row">
-      <div class="col-xl-2"></div>
-      <div class="col-xl-8">
+      <div class="col-1 col-xl-2"></div>
+      <div class="col-10 col-xl-8">
         <h1 class="fs-2">Odd Sequences</h1>
         <h2 class="fs-5">
           This site will calculates only the odd values in a sequence of numbers, given the min and max sequence value
           as
           inputs</h2>
       </div>
-      <div class="col-xl-2"></div>
+      <div class="col-1 col-xl-2"></div>
     </div>
 
     <div class="row mt-3">
-      <div class="col-xl-2"></div>
-      <div class="col-xl-8">
+      <div class="col-1 col-xl-2"></div>
+      <div class="col-10 col-xl-8">
         <div class="card text-bg-light">
           <div class="card-body">
             <div class="row pb-4 align-items-center">
@@ -45,32 +45,33 @@
 
             <div class="row">
               <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-primary">Calculate</button>
+                <button type="submit" class="btn btn-primary" id="btn-calculate">Calculate</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-xl-2"></div>
+      <div class="col-1 col-xl-2"></div>
     </div>
 
     <div class="row mt-3">
-      <div class="col-xl-2"></div>
-      <div class="col-xl-8">
+      <div class="col-1 col-xl-2"></div>
+      <div class="col-10 col-xl-8">
         <div class="card text-bg-light">
           <div class="card-body">
             <div class="row align-items-center">
               <div class="col-xl-2">Result</div>
-              <div class="col-xl-10" id="result">
+              <div class="col-xl-10" id="result-box">
                 <input class="form-control" type="text" value="" aria-label="readonly input example" readonly>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-xl-2"></div>
+      <div class="col-1 col-xl-2"></div>
     </div>
 
+    <script src="JavaScripts/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
